# atrax

./: .gitignore  Dockerfile  README.md  docker-compose.yml  docker-compose2.yml  example.env  main.py  makefile  pyproject.toml
phone_lookup/: manage.py
phone_lookup/api/: serializers.py  urls.py  views.py
phone_lookup/core/: models.py  tasks.py  urls.py  views.py
phone_lookup/core/management/commands/: force_update.py  update_db.py
phone_lookup/core/migrations/: 0001_initial.py  0002_create_registry_source_field.py
phone_lookup/core/services/: phone_lookup_service.py  registry_sync_service.py
phone_lookup/core/templates/: phone_lookup.html
phone_lookup/phone_lookup/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
